--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ag-grid-community": "^24.1.0",
     "ag-grid-react": "^24.1.1",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
